--- a/app/src/main/res/layout/activity_ac_detail.xml
+++ b/app/src/main/res/layout/activity_ac_detail.xml
@@ -470,11 +470,27 @@
 
             </LinearLayout>
 
-            <android.support.v7.widget.RecyclerView
-                android:id="@+id/recyclerView"
+            <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="20dp" />
+                android:layout_height="wrap_content">
+                <TextView
+                    android:id="@+id/tv_no_ping"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:visibility="gone"
+                    android:layout_centerInParent="true"
+                    android:drawablePadding="@dimen/dp_10"
+                    android:textSize="@dimen/sp_14"
+                    android:textColor="@color/text_black"
+                    android:text="暂无留言评论"/>
+
+                <android.support.v7.widget.RecyclerView
+                    android:id="@+id/recyclerView"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="20dp" />
+            </RelativeLayout>
+
 
         </LinearLayout>
 
