--- a/app/src/main/res/layout/activity_commit_help.xml
+++ b/app/src/main/res/layout/activity_commit_help.xml
@@ -106,12 +106,13 @@
             android:orientation="vertical"
             android:padding="10dp">
 
-            <LinearLayout
+            <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
 
                 <ImageView
+                    android:id="@+id/iv_content"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:src="@mipmap/login_account" />
@@ -120,13 +121,13 @@
                     android:id="@+id/et_commit_help_comment"
                     android:layout_width="match_parent"
                     android:layout_height="150dp"
-                    android:layout_marginLeft="10dp"
                     android:background="@null"
                     android:gravity="start"
                     android:maxLength="600"
                     android:textColor="@color/text_black"
-                    android:textSize="14sp" />
-            </LinearLayout>
+                    android:textSize="14sp"
+                    android:hint="请输入您的留言内容"/>
+            </RelativeLayout>
 
 
             <LinearLayout
