--- a/app/src/main/res/layout/item_help_history.xml
+++ b/app/src/main/res/layout/item_help_history.xml
@@ -13,7 +13,7 @@
         android:src="@color/global" />
 
     <TextView
-        android:id="@+id/img_help_history_name"
+        android:id="@+id/tv_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_toRightOf="@id/img_help_history_avatar"
@@ -22,10 +22,10 @@
         android:textSize="14sp" />
 
     <TextView
-        android:id="@+id/img_help_history_time"
+        android:id="@+id/tv_time"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/img_help_history_name"
+        android:layout_below="@id/tv_name"
         android:layout_marginTop="2dp"
         android:layout_toRightOf="@id/img_help_history_avatar"
         android:text="2018.1.18 13:45"
@@ -33,23 +33,43 @@
         android:textSize="10sp" />
 
     <TextView
-        android:id="@+id/img_help_history_des"
+        android:id="@+id/tv_describe"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/img_help_history_time"
+        android:layout_below="@id/tv_time"
         android:layout_marginTop="4dp"
         android:layout_toRightOf="@id/img_help_history_avatar"
         android:text="描述"
         android:textColor="@color/text_black"
         android:textSize="11sp" />
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/recyclerView"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/img_help_history_des"
-        android:layout_below="@id/img_help_history_des"
-        android:layout_marginTop="12dp" />
+        android:layout_marginTop="10dp"
+        android:layout_toRightOf="@id/img_help_history_avatar"
+        android:layout_below="@id/tv_describe"
+        android:padding="10dp"
+        android:background="#eeeeee"
+        android:orientation="horizontal">
+        <TextView
+            android:id="@+id/tv_help_review_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="凤城雷锋APP:"
+            android:textColor="@color/global"
+            android:textSize="12sp" />
 
+        <TextView
+            android:id="@+id/tv_help_review"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:maxLines="2"
+            android:lineSpacingExtra="4dp"
+            android:layout_marginLeft="4dp"
+            android:text="收到了"
+            android:textColor="@color/text_black"
+            android:textSize="12sp" />
+    </LinearLayout>
 
 </RelativeLayout>
