处理量为排行榜单

--- a/app/src/main/res/layout/item_my_ac.xml
+++ b/app/src/main/res/layout/item_my_ac.xml
@@ -23,6 +23,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
+            android:drawableLeft="@mipmap/shijian"
+            android:drawablePadding="8dp"
             android:layout_margin="10dp"
             android:text="4小时"
             android:textColor="@color/global"
@@ -59,6 +61,8 @@
                 android:id="@+id/tv_my_ac_num"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:drawableLeft="@mipmap/renshu"
+                android:drawablePadding="8dp"
                 android:layout_alignParentRight="true"
                 android:layout_centerVertical="true"
                 android:text="12/40"
