--- a/app/src/main/res/layout/activity_modify_phone.xml
+++ b/app/src/main/res/layout/activity_modify_phone.xml
@@ -85,7 +85,7 @@
 
         <TextView
             android:id="@+id/tv_get_code"
-            android:layout_width="wrap_content"
+            android:layout_width="80dp"
             android:layout_height="wrap_content"
             android:paddingLeft="14dp"
             android:paddingBottom="14dp"
