--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -10,13 +10,29 @@
 
     <include layout="@layout/layout_title"/>
 
-    <TextView
-        android:id="@+id/tv_set_clear"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:drawableRight="@mipmap/login_account"
-        android:padding="12dp"
-        android:text="清除缓存" />
+        android:orientation="horizontal">
+        <TextView
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="wrap_content"
+            android:padding="12dp"
+            android:text="清除缓存" />
+
+        <TextView
+            android:id="@+id/tv_set_clear"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="12dp"
+            android:drawableRight="@mipmap/arrow_right"
+            android:drawablePadding="8dp"
+            android:textColor="@color/text_black"
+            android:textSize="@dimen/sp_12"
+            android:text=""/>
+
+    </LinearLayout>
 
     <include layout="@layout/layout_line" />
 
@@ -47,7 +63,7 @@
         android:id="@+id/tv_set_update"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:drawableRight="@mipmap/login_account"
+        android:drawableRight="@mipmap/arrow_right"
         android:padding="12dp"
         android:text="版本更新" />
 
