--- a/app/src/main/res/layout/dialog_rili.xml
+++ b/app/src/main/res/layout/dialog_rili.xml
@@ -2,11 +2,11 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     android:orientation="vertical">
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/white">
+        android:layout_height="wrap_content">
         <TextView
             android:id="@+id/tv_cancle"
             android:layout_width="wrap_content"
