--- a/app/src/main/res/layout/item_zhiyuanzhe.xml
+++ b/app/src/main/res/layout/item_zhiyuanzhe.xml
@@ -55,7 +55,7 @@
             android:orientation="horizontal">
 
             <TextView
-                android:id="@+id/tv_refuse"
+                android:id="@+id/tv_agree"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:background="@drawable/white_gray_stroke_selector"
@@ -68,7 +68,7 @@
                 android:textSize="@dimen/sp_12" />
 
             <TextView
-                android:id="@+id/tv_agree"
+                android:id="@+id/tv_refuse"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginRight="@dimen/sp_12"
@@ -76,6 +76,7 @@
                 android:paddingBottom="8dp"
                 android:paddingLeft="12dp"
                 android:paddingRight="12dp"
+                android:layout_marginLeft="@dimen/dp_10"
                 android:paddingTop="8dp"
                 android:text="拒绝"
                 android:textColor="@color/text_red"
