--- a/app/src/main/res/layout/activity_publish_project.xml
+++ b/app/src/main/res/layout/activity_publish_project.xml
@@ -132,7 +132,8 @@
                 android:paddingBottom="10dp"
                 android:paddingLeft="32dp"
                 android:paddingRight="32dp"
-                android:paddingTop="10dp">
+                android:paddingTop="10dp"
+                android:visibility="gone">
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -167,6 +168,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
+                android:gravity="center_vertical"
                 android:paddingBottom="10dp"
                 android:paddingLeft="32dp"
                 android:paddingRight="32dp"
@@ -179,16 +181,26 @@
                     android:text="报名时间："
                     android:textColor="@color/black"
                     android:textSize="14sp" />
-
-                <EditText
-                    android:id="@+id/et_launch_event_baoming_time"
+                <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:background="@drawable/shape_gray"
-                    android:padding="6dp"
-                    android:text=""
-                    android:textColor="@color/text_black"
-                    android:textSize="13sp" />
+                    android:orientation="vertical"
+                    android:padding="4dp">
+
+                    <TextView
+                        android:id="@+id/et_launch_event_baoming_time"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:drawablePadding="@dimen/dp_10"
+                        android:drawableRight="@mipmap/sanjiaoxiabiao"
+                        android:paddingBottom="4dp"
+                        android:paddingLeft="6dp"
+                        android:paddingRight="@dimen/sp_12"
+                        android:paddingTop="4dp"
+                        android:textColor="@color/text_black"
+                        android:textSize="13sp" />
+                </LinearLayout>
 
             </LinearLayout>
 
@@ -196,6 +208,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
+                android:gravity="center_vertical"
                 android:paddingBottom="10dp"
                 android:paddingLeft="32dp"
                 android:paddingRight="32dp"
@@ -209,16 +222,26 @@
                     android:textColor="@color/black"
                     android:textSize="14sp" />
 
-                <EditText
-                    android:id="@+id/et_launch_event_jiezhi_time"
+                <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:background="@drawable/shape_gray"
-                    android:padding="6dp"
-                    android:text=""
-                    android:textColor="@color/text_black"
-                    android:textSize="13sp" />
+                    android:orientation="vertical"
+                    android:padding="4dp">
 
+                    <TextView
+                        android:id="@+id/et_launch_event_jiezhi_time"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:drawablePadding="@dimen/dp_10"
+                        android:drawableRight="@mipmap/sanjiaoxiabiao"
+                        android:paddingBottom="4dp"
+                        android:paddingLeft="6dp"
+                        android:paddingRight="@dimen/sp_12"
+                        android:paddingTop="4dp"
+                        android:textColor="@color/text_black"
+                        android:textSize="13sp" />
+                </LinearLayout>
 
             </LinearLayout>
 
@@ -226,6 +249,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
+                android:gravity="center_vertical"
                 android:paddingBottom="10dp"
                 android:paddingLeft="32dp"
                 android:paddingRight="32dp"
@@ -239,15 +263,26 @@
                     android:textColor="@color/black"
                     android:textSize="14sp" />
 
-                <EditText
-                    android:id="@+id/et_launch_event_start_time"
+                <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:background="@drawable/shape_gray"
-                    android:padding="6dp"
-                    android:text=""
-                    android:textColor="@color/text_black"
-                    android:textSize="13sp" />
+                    android:orientation="vertical"
+                    android:padding="4dp">
+
+                    <TextView
+                        android:id="@+id/et_launch_event_start_time"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:drawablePadding="@dimen/dp_10"
+                        android:drawableRight="@mipmap/sanjiaoxiabiao"
+                        android:paddingBottom="4dp"
+                        android:paddingLeft="6dp"
+                        android:paddingRight="@dimen/sp_12"
+                        android:paddingTop="4dp"
+                        android:textColor="@color/text_black"
+                        android:textSize="13sp" />
+                </LinearLayout>
 
             </LinearLayout>
 
@@ -255,6 +290,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
+                android:gravity="center_vertical"
                 android:paddingBottom="10dp"
                 android:paddingLeft="32dp"
                 android:paddingRight="32dp"
@@ -267,17 +303,26 @@
                     android:text="结束时间："
                     android:textColor="@color/black"
                     android:textSize="14sp" />
-
-
-                <EditText
-                    android:id="@+id/et_launch_event_end_time"
+                <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:background="@drawable/shape_gray"
-                    android:padding="6dp"
-                    android:text=""
-                    android:textColor="@color/text_black"
-                    android:textSize="13sp" />
+                    android:orientation="vertical"
+                    android:padding="4dp">
+
+                    <TextView
+                        android:id="@+id/et_launch_event_end_time"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:drawablePadding="@dimen/dp_10"
+                        android:drawableRight="@mipmap/sanjiaoxiabiao"
+                        android:paddingBottom="4dp"
+                        android:paddingLeft="6dp"
+                        android:paddingRight="@dimen/sp_12"
+                        android:paddingTop="4dp"
+                        android:textColor="@color/text_black"
+                        android:textSize="13sp" />
+                </LinearLayout>
 
             </LinearLayout>
 
@@ -322,6 +367,79 @@
                         android:text="小时"
                         android:textColor="@color/black"
                         android:textSize="14sp" />
+                </RelativeLayout>
+
+
+            </LinearLayout>
+
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:paddingBottom="10dp"
+                android:paddingLeft="32dp"
+                android:paddingRight="32dp"
+                android:paddingTop="10dp"
+                android:visibility="visible">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="每天开始时间："
+                    android:textColor="@color/black"
+                    android:textSize="14sp" />
+
+                <RelativeLayout
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/shape_gray">
+                    <EditText
+                        android:id="@+id/et_day_start"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:background="@null"
+                        android:padding="6dp"
+                        android:textColor="@color/text_black"
+                        android:textSize="13sp" />
+
+                </RelativeLayout>
+
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:paddingBottom="10dp"
+                android:paddingLeft="32dp"
+                android:paddingRight="32dp"
+                android:paddingTop="10dp"
+                android:visibility="visible">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="每天结束时间："
+                    android:textColor="@color/black"
+                    android:textSize="14sp" />
+
+                <RelativeLayout
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/shape_gray">
+                    <EditText
+                        android:id="@+id/et_day_end"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:background="@null"
+                        android:padding="6dp"
+                        android:textColor="@color/text_black"
+                        android:textSize="13sp" />
+
                 </RelativeLayout>
 
 
