--- a/app/src/main/res/layout/item_qiandao.xml
+++ b/app/src/main/res/layout/item_qiandao.xml
@@ -3,45 +3,60 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@color/white"
-    android:gravity="center_vertical"
-    android:padding="@dimen/sp_12"
-    android:orientation="horizontal">
+    android:orientation="vertical">
 
-
-    <de.hdodenhof.circleimageview.CircleImageView
-        android:id="@+id/iv_pic"
-        android:layout_width="50dp"
-        android:layout_height="50dp" />
-    <TextView
-        android:id="@+id/tv_name"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="@dimen/dp_10"
-        android:textColor="@color/text_gray"
-        android:textSize="@dimen/sp_12"
-        android:text="名字"/>
+        android:gravity="center_vertical"
+        android:orientation="horizontal"
+        android:padding="@dimen/sp_12">
+
+
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:id="@+id/iv_pic"
+            android:layout_width="50dp"
+            android:layout_height="50dp" />
+
+        <TextView
+            android:id="@+id/tv_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="@dimen/dp_10"
+            android:text="名字"
+            android:textColor="@color/text_gray"
+            android:textSize="@dimen/sp_12" />
+
+        <View
+            android:layout_width="0dp"
+            android:layout_height="1dp"
+            android:layout_weight="1" />
+
+
+        <TextView
+            android:id="@+id/tv_qiandao"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/white_gray_stroke_selector"
+            android:padding="@dimen/dp_10"
+            android:text="签到"
+            android:textColor="@color/text_blue"
+            android:textSize="@dimen/sp_12" />
+
+        <TextView
+            android:id="@+id/tv_qiantui"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:background="@drawable/white_gray_stroke_selector"
+            android:padding="@dimen/dp_10"
+            android:text="签退"
+            android:textColor="@color/text_red"
+            android:textSize="@dimen/sp_12" />
+    </LinearLayout>
+
     <View
-        android:layout_width="0dp"
-        android:layout_weight="1"
-        android:layout_height="1dp"/>
-
-
-    <TextView
-        android:id="@+id/tv_qiandao"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:padding="@dimen/dp_10"
-        android:textColor="@color/text_blue"
-        android:textSize="@dimen/sp_12"
-        android:text="签到"/>
-
-    <TextView
-        android:id="@+id/tv_qiantui"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="10dp"
-        android:padding="@dimen/dp_10"
-        android:textColor="@color/text_red"
-        android:textSize="@dimen/sp_12"
-        android:text="签退"/>
+        android:layout_width="match_parent"
+        android:layout_height="0.8dp"
+        android:background="@color/line_color"/>
 </LinearLayout>
